fix: make grid to be not stretched

--- a/src/components/CandidateList/CandidateList.scss
+++ b/src/components/CandidateList/CandidateList.scss
@@ -11,8 +11,8 @@
   flex: 1;
 
   .candidate-list {
+    padding: 0;
     display: grid;
-    flex: 1;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
